--- a/valuetransfer/src/main/res/layout/fragment_contacts_chat.xml
+++ b/valuetransfer/src/main/res/layout/fragment_contacts_chat.xml
@@ -9,19 +9,19 @@
         android:id="@+id/rvMessages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_contact_chat_message"
         app:layout_constraintBottom_toTopOf="@+id/clMessageInputRow"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_contacts_chat_detail" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clMessageInputRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryValueTransfer"
+        android:elevation="20dp"
         android:paddingHorizontal="8dp"
         android:paddingVertical="12dp"
-        android:elevation="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -35,24 +35,24 @@
             android:backgroundTint="@color/colorYellow"
             android:padding="6dp"
             android:src="@drawable/ic_baseline_attach_file_24"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:tint="@color/white" />
 
         <EditText
             android:id="@+id/etMessage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="35dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/pill_rounded"
             android:backgroundTint="@color/white"
             android:hint="Type your message"
             android:inputType="textMultiLine"
+            android:maxLines="4"
+            android:minHeight="35dp"
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:maxLines="4"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/ivAttachment"
             app:layout_constraintEnd_toStartOf="@+id/btnSendMessage"
@@ -61,16 +61,13 @@
         <Button
             android:id="@+id/btnSendMessage"
             style="@style/ButtonDarkGreenRounded"
-            android:text="Send"
-            android:enabled="false"
-            android:clickable="false"
             android:alpha="0.5"
+            android:clickable="false"
+            android:enabled="false"
+            android:text="Send"
             app:layout_constraintBottom_toBottomOf="@+id/etMessage"
             app:layout_constraintEnd_toEndOf="parent"
             tools:backgroundTint="@color/colorPrimaryDarkValueTransfer" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
