--- a/valuetransfer/src/main/res/layout/fragment_wallet_contacts.xml
+++ b/valuetransfer/src/main/res/layout/fragment_wallet_contacts.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:background="@color/colorPrimaryValueTransfer">
 
     <TextView
         android:id="@+id/tvChatsSocialTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:text="Contacts"
         android:textColor="@color/white"
         android:textSize="32sp"
-        android:layout_marginStart="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvNoChats"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:background="@drawable/pill_rounded"
+        android:backgroundTint="@color/gray"
+        android:gravity="center"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="16dp"
+        android:text="NO INTERACTION WITH CONTACTS"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvChatsSocialTitle"
+        tools:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvContactChats"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tvChatsSocialTitle"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoChats"
         tools:itemCount="2"
-        tools:listitem="@layout/item_chat_overview" />
+        tools:listitem="@layout/item_contacts_chat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
