--- a/valuetransfer/src/main/res/layout/item_contacts.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts.xml
@@ -1,65 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="4dp">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="70dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
-
-    <ImageView
-        android:id="@+id/ivContactNew"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="8dp"
-        android:layout_marginHorizontal="8dp"
-        android:padding="15dp"
-        android:background="@drawable/circle"
-        android:backgroundTint="@color/gray"
-        app:tint="@color/colorPrimaryValueTransfer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvContactInitials"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:layout_marginHorizontal="8dp"
-        android:padding="5dp"
-        android:text="AA"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@+id/ivContactNew"
-        app:layout_constraintEnd_toEndOf="@+id/ivContactNew"
-        app:layout_constraintTop_toTopOf="@+id/ivContactNew"
-        app:layout_constraintBottom_toBottomOf="@+id/ivContactNew" />
-
-    <TextView
-        android:id="@+id/tvContactName"
-        android:layout_width="match_parent"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:text="Contact"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        android:maxLines="1"
-        android:gravity="center"
-        android:ellipsize="end"
-        android:layout_marginTop="4dp"
-        android:layout_marginHorizontal="4dp"
-        android:paddingBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/ivContactNew"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/ivContactNewBackground"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/white"
+            android:padding="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/white" />
+
+        <ImageView
+            android:id="@+id/ivContactNew"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/gray"
+            android:padding="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/colorPrimaryValueTransfer" />
+
+        <TextView
+            android:id="@+id/tvContactInitials"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="8dp"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="AA"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/ivContactNew"
+            app:layout_constraintEnd_toEndOf="@+id/ivContactNew"
+            app:layout_constraintStart_toStartOf="@+id/ivContactNew"
+            app:layout_constraintTop_toTopOf="@+id/ivContactNew" />
+
+        <TextView
+            android:id="@+id/tvContactName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="2dp"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:paddingBottom="8dp"
+            android:text="Contact"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivContactNew" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
