--- a/valuetransfer/src/main/res/menu/valuetransfer_navigation_menu.xml
+++ b/valuetransfer/src/main/res/menu/valuetransfer_navigation_menu.xml
@@ -11,12 +11,12 @@
         android:title="Identity" />
 
     <item
+        android:id="@+id/exchangeFragment"
+        android:icon="@drawable/ic_exchange"
+        android:title="Exchange" />
+
+    <item
         android:id="@+id/contactsFragment"
         android:icon="@drawable/ic_contacts"
         android:title="Contacts" />
-
-    <item
-        android:id="@+id/walletExchangeFragment"
-        android:icon="@drawable/ic_exchange"
-        android:title="Exchange" />
 </menu>
