--- a/valuetransfer/src/main/res/values-v27/styles.xml
+++ b/valuetransfer/src/main/res/values-v27/styles.xml
@@ -6,5 +6,20 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDarkValueTransfer</item>
         <item name="android:navigationBarColor">@color/colorPrimaryValueTransfer</item>
         <item name="android:windowLightNavigationBar">false</item>
+        <item name="actionBarStyle">@style/ActionBar</item>
+        <item name="actionOverflowMenuStyle">@style/OptionsMenu</item>
+    </style>
+
+    <style name="ActionBar" parent="@style/Widget.AppCompat.ActionBar.Solid">
+        <item name="titleTextStyle">@style/ActionBarTextStyle</item>
+    </style>
+
+    <style name="ActionBarTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="OptionsMenu" parent="Widget.AppCompat.PopupMenu.Overflow" >
+        <item name="android:overlapAnchor">false</item>
+        <item name="android:dropDownVerticalOffset">4.0dip</item>
     </style>
 </resources>
