--- a/valuetransfer/src/main/res/values/styles.xml
+++ b/valuetransfer/src/main/res/values/styles.xml
@@ -43,7 +43,6 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">35dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
-
         <item name="android:background">@drawable/button_rounded</item>
         <item name="backgroundTint">@color/white</item>
         <item name="android:paddingTop">4dp</item>
@@ -54,6 +53,11 @@
     <style name="ButtonWhiteRounded" parent="ButtonRounded">
         <item name="backgroundTint">@color/white</item>
         <item name="android:textColor">@color/colorPrimaryValueTransfer</item>
+    </style>
+
+    <style name="ButtonRedRounded" parent="ButtonRounded">
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">#FF6961</item>
     </style>
 
     <style name="ButtonGreenRounded" parent="ButtonRounded">
