--- a/valuetransfer/src/main/res/layout/fragment_identity.xml
+++ b/valuetransfer/src/main/res/layout/fragment_identity.xml
@@ -6,30 +6,122 @@
     android:layout_height="match_parent"
     tools:background="@color/colorPrimaryValueTransfer">
 
-    <TextView
-        android:id="@+id/tvNoPersonalIdentity"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingHorizontal="12dp"
-        android:paddingVertical="16dp"
-        android:layout_margin="12dp"
-        android:backgroundTint="@color/white"
-        android:background="@drawable/pill_rounded"
-        android:text="CLICK TO ADD PERSONAL IDENTITY DETAILS"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryValueTransfer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bnvIdentity"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvPersonalIdentities"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvNoPersonalIdentity"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_identity_detail_new" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvNoIdentity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:background="@drawable/pill_rounded"
+                android:backgroundTint="@color/white"
+                android:gravity="center"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="16dp"
+                android:text="CLICK TO ADD IDENTITY"
+                android:textColor="@color/colorPrimaryValueTransfer"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvIdentities"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/tvNoIdentity"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_identity_detail" />
+
+            <TextView
+                android:id="@+id/tvAttributesTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="Complementary Attributes"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvIdentities" />
+
+            <TextView
+                android:id="@+id/tvNoAttributes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:background="@drawable/pill_rounded"
+                android:backgroundTint="@color/white"
+                android:gravity="center"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="16dp"
+                android:text="CLICK TO ADD ATTRIBUTE"
+                android:textColor="@color/colorPrimaryValueTransfer"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvAttributesTitle"
+                tools:visibility="visible" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvAttributes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvNoAttributes"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_identity_attribute" />
+
+            <TextView
+                android:id="@+id/tvAttestationsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="4dp"
+                android:text="Attestations"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rvAttributes" />
+
+            <TextView
+                android:id="@+id/tvNoAttestations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:background="@drawable/pill_rounded"
+                android:backgroundTint="@color/white"
+                android:gravity="center"
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="16dp"
+                android:text="CLICK TO ADD ATTESTATION"
+                android:textColor="@color/colorPrimaryValueTransfer"
+                android:textStyle="bold"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvAttestationsTitle"
+                tools:visibility="visible" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvAttestations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@+id/tvNoAttestations"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_identity_attestation" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnvIdentity"
