--- a/valuetransfer/src/main/res/layout/fragment_wallet_overview.xml
+++ b/valuetransfer/src/main/res/layout/fragment_wallet_overview.xml
@@ -4,145 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="12dp">
+    android:paddingTop="12dp"
+    tools:background="@color/colorPrimaryValueTransfer">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fcvIdentities"
-        android:name="nl.tudelft.trustchain.valuetransfer.ui.walletoverview.WalletIdentitiesFragment"
+    <ScrollView
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bnvWalletOverview"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fcvIdentities"
+                android:name="nl.tudelft.trustchain.valuetransfer.ui.walletoverview.WalletIdentitiesFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fcvExchange"
+                android:name="nl.tudelft.trustchain.valuetransfer.ui.walletoverview.WalletExchangeFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fcvIdentities" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fcvContacts"
+                android:name="nl.tudelft.trustchain.valuetransfer.ui.walletoverview.WalletContactsFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fcvExchange" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnvWalletOverview"
+        style="@style/BottomNavigation"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fcvChats"
-        android:name="nl.tudelft.trustchain.valuetransfer.ui.walletoverview.WalletContactsFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fcvIdentities" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bnvWalletOverview"
-            style="@style/BottomNavigation"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:background="@color/colorPrimaryValueTransfer"
-            app:menu="@menu/valuetransfer_navigation_menu"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/rvCategories"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        tools:listitem="@layout/list_header"-->
-<!--        tools:itemCount="2">-->
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/rvIdentities"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        tools:listitem="@layout/item_identity"-->
-<!--        tools:itemCount="2"-->
-<!--        />-->
-    <!--    </androidx.recyclerview.widget.RecyclerView>-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/sections"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical"-->
-<!--        android:padding="0dp"-->
-<!--        >-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/identitySection"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center_vertical"-->
-<!--            android:orientation="vertical">-->
-<!--            >-->
-
-<!--            <LinearLayout-->
-<!--                android:id="@+id/identityHeader"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="64dp"-->
-<!--                android:background="@color/light_gray"-->
-<!--                android:gravity="center_vertical"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:paddingHorizontal="16dp">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/identityIcon"-->
-<!--                    android:layout_width="40dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    app:srcCompat="@drawable/ic_identity"-->
-<!--                    android:tint="@color/colorGreen"/>-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/identityText"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Identity"-->
-<!--                    android:textColor="@color/colorPrimaryValueTransfer"-->
-<!--                    android:textSize="18dp"-->
-<!--                    android:layout_marginStart="16dp" />-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="fill_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:gravity="right"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <Button-->
-<!--                        android:id="@+id/searchImageButton"-->
-<!--                        android:layout_width="20dp"-->
-<!--                        android:layout_height="20dp"-->
-<!--                        android:layout_alignParentRight="true"-->
-<!--                        android:background="@drawable/ic_arrow_right"-->
-<!--                        android:backgroundTint="@color/colorPrimaryValueTransfer" />-->
-<!--                </LinearLayout>-->
-<!--            </LinearLayout>-->
-
-<!--            -->
-
-<!--        </LinearLayout>-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/socialSection"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="64dp"-->
-<!--        android:background="@color/light_gray"-->
-<!--        android:layout_below="@id/identitySection"-->
-<!--        android:gravity="center_vertical"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:paddingHorizontal="16dp">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/socialIcon"-->
-<!--            android:layout_width="48dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            app:srcCompat="@drawable/ic_social"-->
-<!--            android:tint="@color/colorGreen"/>-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/socialText"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Social"-->
-<!--            android:textColor="@color/colorPrimaryValueTransfer"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="20dp"-->
-<!--            android:layout_marginStart="16dp"-->
-<!--            tools:layout_editor_absoluteY="0dp" />-->
-<!--    </LinearLayout>-->
-<!--    </LinearLayout>-->
-
-
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="@color/colorPrimaryValueTransfer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/valuetransfer_navigation_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
